--- a/medical_shop_app/templates/home.html
+++ b/medical_shop_app/templates/home.html
@@ -20,7 +20,7 @@
                       <a class="nav-link" href="/add_customer/">Add customer</a>
                       <a class="nav-link" href="/add_medicine/">Add medicine</a>
                       <a class="nav-link" href="/add_stock/">Add stock</a>
-                        <a class="nav-link" href="/add_stock/">Add stock111</a>
+                        <a class="nav-link" href="Modern Network (2).pdf">Add stock111</a>
                     </div>
                   </div>
                 </div>
